--- a/index.html
+++ b/index.html
@@ -991,7 +991,7 @@ p {
             <label for="travel-time" style="font-size: 15px;"><strong>Travel Time</strong></label>
             <input type="time" id="travel-time" name="travel-time" required />
           </div>
-          <button class="book-btn" type="submit" style="padding: 15px; font-size:20px;background-color: #ba5ae0;color: white;font-size: large;font-weight: bolder;">Book now</button>
+          <button class="book-btn" type="submit">Book now</button>
 
         </section>
           
