--- a/index.html
+++ b/index.html
@@ -2116,7 +2116,7 @@ button:hover:before {
               placeholder="Describe any issue with the staff here. Please provide details"></textarea>
 
             <div class="form-button">
-              <button type="submit">Send</button>
+              <button type="submit">Share your Experience</button>
             </div>
           </form>
 
@@ -2230,7 +2230,7 @@ button:hover:before {
           box-sizing: border-box;
       }
       button[type="submit"] {
-          width: 100px;
+          width: 50%;
           padding: 6px;
           font-size: 14px;
       }
